--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,8 @@ services:
     container_name: alineador-api
     ports:
       - "8080:8080"
-    depends_on:
-      - redis
     environment:
       - PORT=8080
-      - REDIS_URL=redis://redis:6379
+      - REDIS_URL=${REDIS_URL}
     command: ["node", "dist/server.js"]
 
-  redis:
-    image: redis
-    container_name: redis
-    ports:
-      - "6379:6379"
